servicenow/0.3.9/modules/ROOT/pages/servicenow-connector.adoc
= ServiceNow Connector - Mule 3
:page-aliases: 3.9@mule-runtime::servicenow-connector.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

ServiceNow Connector v4.0

Anypoint Connector for ServiceNow (ServiceNow Connector) facilitates connections between Mule runtime engine (Mule) integration and ServiceNow applications for ServiceNow Connector 4.0 and later. The ServiceNow connector currently provides access to standard tables in the ServiceNow database, enabling you to perform Insert, Delete Record, Delete Multiple, Update, Get, Get Keys, and Get Record operations on them.

Release Notes: xref:release-notes::connector/servicenow-connector-release-notes.adoc[ServiceNow Connector Release Notes] +
Exchange: https://www.mulesoft.com/exchange/org.mule.modules/mule-module-servicenow/[ServiceNow Connector]

//Reference: https://mulesoft.github.io/mule3-servicenow-connector[ServiceNow Connector Reference]

== Prerequisites

You are familiar with ServiceNow, Mule runtime engine, xref:3.9@mule-runtime::anypoint-connectors.adoc[Anypoint Connectors], and the xref:6@studio::index.adoc[Anypoint Studio interface]. To increase your familiarity with Studio, consider completing one or more xref:6@studio::basic-studio-tutorial.adoc[Anypoint Studio Tutorials]. Further, you have a basic understanding of xref:3.9@mule-runtime::mule-concepts.adoc[Mule flows] and xref:3.9@mule-runtime::global-elements.adoc[Mule Global Elements].

This document describes implementation examples within the context of Anypoint Studio, Mule’s graphical user interface, and, also includes configuration details for doing the same in the XML Editor.

If you don't use Anypoint Studio for development, follow the instructions to http://mulesoft.github.io/servicenow-connector/4.0.1/mule/servicenow-config.html[install the ServiceNow Maven dependencies] into your `pom.xml` file.

For ServiceNow connector v4.0 to function properly, the namespace for locally declared elements must be qualified by the target namespace. Make the following change in your ServiceNow instance to do so:

. Go to *System Properties* > *Web Services*
. Click *Properties*
. De-select the **YES|NO** box for the **elementFormDefault **property as shown below.
+
image::snow-screen.png[]

Note that the box is selected by default, setting the *elementFormDefault* property to *true*.   By de-selecting the box, we set the property to *false* thereby specifying that locally declared elements must be qualified by the target namespace.

== Install the Connector

. In Anypoint Studio, click the Exchange icon in the Studio taskbar.
. Sign in to Exchange with your Anypoint Platform credentials.
. From Anypoint Exchange, click *Provided by MuleSoft*.
. Search for the Mule 3 connector and click *Install*.

When Studio has an update, a message displays in the lower right corner, which you can click to install the update.

To use the ServiceNow connector in a production environment, you must have either:

* An Enterprise license to use Mule
* A CloudHub Starter, Professional, or Enterprise account

Contact the mailto:info@mulesoft.com[MuleSoft Sales Team] to obtain either of these. (Read more about xref:3.9@mule-runtime::installing-an-enterprise-license.adoc[Installing an Enterprise License].)

== Configuration Using Anypoint Studio

To use the ServiceNow connector in your Mule application, configure:

* If needed, a global ServiceNow element to be used by all the ServiceNow connectors in the application.
* Parameters of each ServiceNow connector instance in the flow.

=== Configure a Global Element

Follow these steps to create a global ServiceNow configuration in a Mule application:

. Click the *Global Elements* tab at the base of the canvas, then click *Create*.
. In the *Choose Global Type* wizard, use the filter to locate and select ServiceNow, and click *OK*.
. Configure the parameters:
+
image::servicenowge.png[serviceNowge]
+
[%header,cols="30a,70a"]
|===
|Field |Description
|*Name* |Enter a name for the configuration so it can be referenced later.
|*Username* |Username for connecting to the ServiceNow instance
|*Password* |Password to log into the ServiceNow instance
|*Service Endpoint* |The URL of the ServiceNow instance. +
Format:` https://<instancename>.service-now.com`
|===
+
. Access the *Pooling Profile* tab to configure any settings relevant to managing multiple connections via a connection pool.
. Access the *Reconnection* tab to configure any settings relevant to reconnection strategies that Mule should execute if it loses its connection to ServiceNow.
. Click *OK* to save the global connector configurations.
. Return to the *Message Flow* tab in Studio.

=== Configure Connector Properties

Follow these steps to configure the parameters of a ServiceNow connector in the flow:

. Drag the ServiceNow connector onto the canvas, then select it to open the properties editor.
. Configure the connector's parameters according to the table below.
+
[%header,cols="30a,70a"]
|===
|Field |Description
|*Display Name* |Enter a unique label for the connector in your application.
|*Connector Configuration* |Connect to a global element linked to this connector. Global elements encapsulate reusable data about the connection to the target resource or service. Select the global ServiceNow connector element that you just created.
|*Operation* |Select the action this component must perform: Insert, Delete Record, Delete Multiple, Update, Get, Get Keys, and Get Record.
|*Type* |Select the ServiceNow table to act upon. For a complete list, see the xref:release-notes::connector/servicenow-connector-release-notes.adoc[ServiceNow Release Notes].
|*<Operation> Request* |*From Message:*  Select this option to define the operation based on the incoming payload. +
 **Create Object manually:  S**elect this option to define the search values manually. Mule provides an editor to facilitate this task.
|===
+
. Save your configurations.

== Configuration from the XML Editor

. To use the ServiceNow connector in your Mule application, configure:
+
* If needed, a global ServiceNow element to be used by all the ServiceNow connectors in the application.
* Parameters of each ServiceNow connector instance in the flow.
+
. Ensure that you have included the ServiceNow namespaces in your configuration file.
+
[source,text,linenums]
----
http://www.mulesoft.org/schema/mule/servicenow
http://www.mulesoft.org/schema/mule/servicenow/current/mule-servicenow.xsd
----
+
. Create a global ServiceNow configuration outside and above your flows, using the following global configuration code.
+
[source,xml,linenums]
----
<servicenow:config name="ServiceNow" username="YOUR_USERNAME" password="YOUR_PASSWORD" serviceEndpoint="YOUR_SERVICENOW_URI"/>
----
+
[%header,cols="30a,70a"]
|===
|Attribute |Description
|*name* |Enter a name for the configuration so it can be referenced from within the flow.
|*username* |Username for connecting to the ServiceNow instance.
|*password* |Password to log into the ServiceNow instance.
|*serviceEndpoint* |The URL of the ServiceNow instance. +
Format: `+https://<instancename>.service-now.com+`
|===
+
. Build your application flow, then add a ServiceNow connector using one of the following operations.
+
[%header,cols="30a,70a"]
|===
|Operation |Description
|http://mulesoft.github.io/servicenow-connector/4.0.1/mule/servicenow-config.html#delete-multiple[<servicenow:delete-multiple>] a|
Delete multiple records from the targeted table by example values.

|http://mulesoft.github.io/servicenow-connector/4.0.1/mule/servicenow-config.html#delete-record[<servicenow:delete-record>] a|
Delete a record from the targeted table by supplying its sys_id.

|http://mulesoft.github.io/servicenow-connector/4.0.1/mule/servicenow-config.html#get[<servicenow:get>] a|
Query a single record from the targeted table by sys_id and return the record and its fields.

|http://mulesoft.github.io/servicenow-connector/4.0.1/mule/servicenow-config.html#get-keys[<servicenow:get-keys>] a|
Query the targeted table by example values and return a comma delimited list of sys_id.

|http://mulesoft.github.io/servicenow-connector/4.0.1/mule/servicenow-config.html#get-records[<servicenow:get-records>] a|
Query the targeted table by example values and return all matching records and their fields.

|http://mulesoft.github.io/servicenow-connector/4.0.1/mule/servicenow-config.html#insert[<servicenow:insert>] a|
Creates a new record for the targeted table.

|http://mulesoft.github.io/servicenow-connector/4.0.1/mule/servicenow-config.html#update[<servicenow:update>] a|
Updates a existing record in the targeted table in the URL, identified by the mandatory sys_id field.

|===
+
Follow the links in the table above to access detailed configuration reference for each of these operations.

////
DOCS-2294 -- Cutting out DataMapper use until a DataWeave solution is provided

== Example Use Case

As a ServiceNow administrator, insert a user record in the ServiceNow application, and if the user belongs to development department, create a request for a Blackberry phone for the user.

=== Configuring the Use Case in the Studio Visual Editor

. Drag an HTTP connector into a new flow. Open the connector's properties editor. Set the exchange pattern to `one-way` and the Path to `onboard`.
+
image::httpconnectorproperties.png[HTTPConnectorProperties]
+
. The new flow is now reachable through the path `+http://localhost:8081/onboard+`. As the exchange pattern is set to one-way, no response message will be returned to the requester.
. Add a Set Payload transformer after HTTP endpoint to process the message payload.
. Configure the Set Payload transformer according to the table below.
+
[%header,cols="30a,70a"]
|===
|Field |Value |XML
|*Display Name* |User info a|`doc:name="User info"`
|*Value* |*Note:* Copy the lines below and concatenate into a continuous statement before adding to Anypoint Studio: +
 `#[['fname':message.inboundProperties['fname'], 'lname':message.inboundProperties['lname'], 'email':message.inboundProperties['email'], dept':message.inboundProperties['dept']]]` a|`value="# [['fname':message.inboundProperties['fname'],
'lname':message.inboundProperties['lname'],
'email':message.inboundProperties['email'],
'dept':message.inboundProperties['dept']]]"`
|===
+
With the above configuration, the transformer is set to accept browser query parameters in the following format:
+
`+http://localhost:8081/onboard?fname=<user’s first name> &lname=<user’s last name> &email= <user’s email address>&dept=<department of the user>+`
+
. Add a Variable transformer to preserve the user’s first name and last name from the message payload. +
Configure the transformer as follows:
+
image::setusername.png[Setusername]
+
. Drag a ServiceNow connector into the flow to create a ServiceNow user with the message payload.
. Add a new Global element by clicking the plus sign next to the *Connector Configuration* field.
. Configure this Global Element according to the table below (Refer to <<Configuration>> for more details).
+
[%header,cols="30a,70a"]
|===
|Field |Description
|*Name* |Enter a unique label for this global element to be referenced by connectors in the flow.
|*Username* |Enter a Username for connecting to the ServiceNow instance.
|*Password* |Enter the user password.
|*ServiceNow Endpoint* |Enter the URL of your ServiceNow server. +
The format of the ServiceNow URL is: `https://<instancename>.service-now.com`
|===
+
. Click *Test Connection* to confirm that Mule can connect with your ServiceNow instance. If the connection is successful, click *OK* to save the configurations of the global element. If unsuccessful, revise or correct any incorrect parameters, then test again.
. Back in the properties editor of the ServiceNow connector, configure the remaining parameters according to the table below.
+
[%header,cols="30a,70a"]
|===
|Field |Value
|*Display Name* |Insert System User (or any other name you prefer)
|*Config Reference* |ServiceNow (Enter name of the global element you have created)
|*Operation* |Insert
|*Type* |User Management --> User (SYS_USER)
|*Insert Request* |Select the `From Message` option
|===
+
. Drag a DataMapper transformer between the Variable transformer and the ServiceNow connector, then click it to open its properties editor.
. Configure the Input properties of the DataMapper according to the steps below. +
. In the *Input type*, select **Map<k,v>**, then select *User Defined*.
. Click **Create/Edit Structure**.
. Enter a name for the Map, then select *Element* for *Type*.
. Add the child fields according to the table below.
+
[%header%autowidth.spread]
|===
|Name |Type
|*dept* |String
|*email* |String
|*lname* |String
|*fname* |String
|===
+
. The Output properties are automatically configured to correspond to the ServiceNow connector.
. Click *Create Mapping*, then drag each input data field to its corresponding output ServiceNow field. Click the blank space on the canvas to save the changes.
. Add another ServiceNow connector to the flow.
. In the *Connector Configuration* field, select the global ServiceNow element you have created.
. Configure the remaining parameters according to the table below.
+
[%header,cols="2*"]
|===
|Field |Value
|*Display Name* |Create a Request (or any other name you prefer)
|*Config Reference* |Enter the name of the global element you have created
|*Operation* |Insert
|*Type* a|
Service Catalog --> Request (SC_REQUEST)

|*Insert Request* |Select *Create Manually*, then click the … button next to the option. On the Object Builder window, find *requestedFor:String* field and enter the following value: `#[flowVars['UserName']]`
|===

. Add a Variable transformer, then configure it according to the table below.
+
[%header,cols="2*"]
|===
|Field |Value
|*Display Name* |Set Request ID
|*Operation* |Set Variable
|*Name* |Request ID
|*Value* |`#[payload.number]`
|===

. Add a ServiceNow connector into the flow to create a ServiceNow request item for the user.
. In the *Connector Configuration* field, select the ServiceNow global element you created.
. Configure the remaining parameters according to the table below.
+
[%header,cols="2*"]
|===
|Field |Value
|*Display Name* |Assign the Requested Item to User (or any other name you want to give to the connector)
|*Config Reference* |Enter the name of the global element you have created
|*Operation* |Insert
|*Type* |Service Catalog --> Requested Item (SC_REQ_ITEM)
|*Insert Request* a|
Select *Create Manually*, then click the button next to it. On the Object Builder window, do the following:

Enter `Blackberry` in *CatItem: String* field

Enter `#[flowVars['RequestID']]` in *request:String* field

|===
+
. Save and run the project as a Mule Application.
. From a browser, navigate to `+http://localhost:8081/onboard+` and enter the user’s first name, last name, email address, and department in the form query parameters:
+
`+http://localhost:8081/onboard?fname=<user’s first name>&lname=<user’s last name> &email= <user’s email address>&dept=<department of the user>+`
+
. Mule performs the query and creates the user record in ServiceNow, then assigns Blackberry phone if the user is a developer.

=== Configuring the Use Case in the XML Editor

. Add a *servicenow:config* global element to your project, then configure its attributes according to the table below (see code below for a complete sample).
+
[source,xml,linenums]
----
<servicenow:config name="ServiceNow" username="<user>" password="<pw>" serviceEndpoint="<endpoint_URL>" doc:name="ServiceNow"/>
----
+
[%header,cols="2*"]
|===

a|
Attribute

 a|
Value

|*name* |ServiceNow
|*doc:name* |ServiceNow
|*username* |<Your username>
|*password* |<Your password>
|*serviceEndpoint* |<the URL of your ServiceNow instance>
|===
+
. Create a Mule flow with an *HTTP endpoint*, configuring the endpoint according to the table below (see code below for a complete sample).
+
[source,xml,linenums]
----
<http:inbound-endpoint exchange-pattern="one-way" host="localhost" port="8081" doc:name="/onboard" path="onboard"/>
----
+
[%header,cols="2*"]
|===

a|
Attribute

 a|
Value

|*exchange-pattern* |one-way
|*host* |local host
|*port* |8081
|*path* |onboard
|*doc:name* |/onboard
|===
+
. After the *HTTP* endpoint, add a set-payload transformer to set the message payload in the flow.
+
[source,xml,linenums]
----
<set-payload value="#[['fname':message.inboundProperties['fname'],'lname':message.inboundProperties['lname'],'email':message.inboundProperties['email'],'dept':message.inboundProperties['dept']]]" doc:name="Set Payload"/>
----
+
[%header,cols="2*"]
|===
|Attribute |Value
|*value* |`#[['fname':message.inboundProperties['fname'],'lname':message.inboundProperties['lname'],'email':message.inboundProperties['email'],'dept':message.inboundProperties['dept']]]`
|*doc:name* |Set Payload
|===
+
. Add a **set-variable** element in the flow to preserve the user name from the payload.
+
[source,xml,linenums]
----
<set-variable variableName="UserName" value="#[message.inboundProperties['fname']+ ' ' +message.inboundProperties['lname']]" doc:name="Set User name"/>
----
+
[%header,cols="2*"]
|===
|Attribute |Value
|variableName |UserName
|value |`#[message.inboundProperties['fname']+ ' ' +message.inboundProperties['lname']]`
|doc:name |Set User name
|===
+
. Add **servicenow:insert** element to the flow now. Configure the attributes according to the table below.
+
[source,xml,linenums]
----
<servicenow:insert config-ref="ServiceNow" type="SYS_USER" doc:name="Insert System User">
      <servicenow:insert-request ref="#[payload]"/>
</servicenow:insert>
----
+
[%header,cols="2*"]
|===
|Attribute |Value
|*config-ref* |ServiceNow
|*type* |User Management --> User (SYS_USER)
|*doc:name* |Insert System User
|*ref* a|
----

"#[payload]"
----

|===
+
. Add a *DataMapper element* between the Set Payload transformer and the ServiceNow connector to pass the message payload to ServiceNow.
+
[source,xml,linenums]
----
<data-mapper:transform config-ref="Map_To_Map" doc:name="Payload to Insert User"/>
----
+
[%header%autowidth.spread]
|===
|Attribute |Value
|*config-ref* |Map_To_Map
|*doc:name* |Payload to Insert User
|===
+
. You must configure the *DataMapper* *element* through Studio's Visual Editor. Switch the view to  Message Flow view, then click the DataMapper element to set its properties.
. In the *Input type*, select **Map<k,v>**, then select *User Defined*.
. Click **Create/Edit Structure**.
. Enter a name for the Map, then select *Element* for *Type*.
. Add the child fields according to the table below.
+
[%header%autowidth.spread]
|===
|Name |Type
|*dept* |String
|*email* |String
|*lname* |String
|*fname* |String
|===
+
. Add a *servicenow:insert element* to create a request for an item in ServiceNow. Configure the attributes according to the table below.
+
[source,xml,linenums]
----
<servicenow:insert config-ref="ServiceNow" type="SC_REQUEST" doc:name="Create a Request">
      <servicenow:insert-request>
          <servicenow:insert-request key="requestedFor">#[flowVars['UserName']]</servicenow:insert-request>
      </servicenow:insert-request>
</servicenow:insert>
----
+
[%header%autowidth.spread]
|===
|Attribute |Value
|*config-ref* |ServiceNow
|*type* |Service Catalog --> Request (SC_REQUEST)
|*doc:name* |Create a Request
|*key* |requestedFor
|===
+
. Add a **set-variable element** to preserve the ServiceNow request ID.
+
[source,xml,linenums]
----
<set-variable variableName="RequestID" value="#[payload.number]" doc:name="Set Request Id"/>
----
+
[%header,cols="2*"]
|===
|Attribute |Value
|*variableName* |RequestID
|*value* |`#[payload.number]`
|*doc:name* |Set Request Id
|===
+
. Add *servicenow:insert* to assign the specified catalog item against the request ID.
+
[%header%autowidth.spread]
|===
|Attribute |Value
|*config-ref* |ServiceNow
|*type* |Service Catalog --> Requested Item (SC_REQ_ITEM)
|*doc:name* |Assign a requested item with user
|*key* |`"request">#[flowVars['RequestID']]`
|*key* |`"catItem">Blackberry`
|===

== Example XML Code

[source,xml,linenums]
----
<mule xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking"
xmlns:json="http://www.mulesoft.org/schema/mule/json"
xmlns:servicenow="http://www.mulesoft.org/schema/mule/servicenow"
xmlns:data-mapper="http://www.mulesoft.org/schema/mule/ee/data-mapper"
xmlns:http="http://www.mulesoft.org/schema/mule/http"
xmlns="http://www.mulesoft.org/schema/mule/core"
xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
xmlns:spring="http://www.springframework.org/schema/beans"
xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
xsi:schemaLocation="http://www.springframework.org/schema/beans
http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core
http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http
http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/servicenow
http://www.mulesoft.org/schema/mule/servicenow/current/mule-servicenow.xsd
http://www.mulesoft.org/schema/mule/ee/data-mapper
http://www.mulesoft.org/schema/mule/ee/data-mapper/current/mule-data-mapper.xsd
http://www.mulesoft.org/schema/mule/json
http://www.mulesoft.org/schema/mule/json/current/mule-json.xsd
http://www.mulesoft.org/schema/mule/ee/tracking
http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd">
    <data-mapper:config name="Map_To_Map"
     transformationGraphPath="map_to_map.grf" doc:name="Map_To_Map"/>
    <servicenow:config name="ServiceNow" username="<user>" password="<pw>"
     serviceEndpoint="<endpoint>" doc:name="ServiceNow"/>
    <flow name="onboarding-example" doc:name="onboarding-example">
        <http:inbound-endpoint exchange-pattern="one-way" host="localhost" port="8081"
         doc:name="/onboard" path="onboard"/>
        <set-payload
value="#[['fname':message.inboundProperties['fname'],'lname':message.inboundProperties['lname'],'email':message.inboundProperties['email'],'dept':message.inboundProperties['dept']]]"
 doc:name="Set Payload"/>
        <set-variable variableName="UserName"
        value="#[message.inboundProperties['fname']+ ' ' +message.inboundProperties['lname']]"
doc:name="Set User name"/>
        <data-mapper:transform config-ref="Map_To_Map" doc:name="Payload to Insert User"/>
        <servicenow:insert config-ref="ServiceNow" type="SYS_USER" doc:name="Insert System User">
            <servicenow:insert-request ref="#[payload]"/>
        </servicenow:insert>
        <servicenow:insert config-ref="ServiceNow" type="SC_REQUEST" doc:name="Create a Request">
            <servicenow:insert-request>
                <servicenow:insert-request key="requestedFor">#[flowVars['UserName']]</servicenow:insert-request>
            </servicenow:insert-request>
        </servicenow:insert>
        <set-variable variableName="RequestID" value="#[payload.number]" doc:name="Set Request Id"/>
        <servicenow:insert config-ref="ServiceNow" type="SC_REQ_ITEM" doc:name="Assign a requested item with user">
            <servicenow:insert-request>
                <servicenow:insert-request key="request">#[flowVars['RequestID']]</servicenow:insert-request>
                <servicenow:insert-request key="catItem">Blackberry</servicenow:insert-request>
            </servicenow:insert-request>
        </servicenow:insert>
    </flow>
</mule>
----

////

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
